# winnow

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICES  README.md  SECURITY.md  build.sh  compose.override.yml  compose.yml  entrypoint.sh  pyproject-cpu.toml  pyproject-intel.toml  pyproject-rocm.toml  pyproject.toml  scheduler.py  upload_tracker.py
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docker-publish.yml  lint.yml  release.yml  test.yml  update-lockfile.yml
docs/: faq.md  setup.md  troubleshooting.md
if_curator/: __init__.py  __main__.py  cache.py  cli.py  config.py  diversity.py  embeddings.py  executor.py  image_processing.py  immich_api.py  jobs.py  logging.py  quality.py  upload_tracker.py
scripts/: benchmark.py
tests/: test_config.py  test_diversity.py  test_frigate_api.py  test_immich_api.py  test_jobs.py  test_quality.py  test_upload_tracker.py
winnow/: __init__.py  cache.py  cli.py  config.py  diversity.py  embeddings.py  executor.py  frigate_api.py  image_processing.py  immich_api.py  jobs.py  log_config.py  quality.py  reconcile.py  upload_tracker.py
